# termitama

./: .gitignore  CMakeLists.txt  README.md  pet_save.json  savegame_v2.json
.claude/: settings.local.json
src/: AudioManager.cpp  AudioManager.h  Display.cpp  Display.h  GameManager.cpp  GameManager.h  Genetics.cpp  Genetics.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Minigame.cpp  Minigame.h  Pet.cpp  Pet.h  PetFSM.cpp  PetFSM.h  Shop.cpp  Shop.h  TuiApp.cpp  TuiApp.h  main.cpp
